# ESP32

irrigation_system/components/drivers/: CMakeLists.txt  http_server.c  mdns.c  mdns_networking.c  wifi.c
irrigation_system/components/drivers/adc/: adc.c
irrigation_system/components/drivers/adc/include/: adc.h
irrigation_system/components/drivers/flash/: flash.c
irrigation_system/components/drivers/flash/include/: flash.h
irrigation_system/components/drivers/http/: http_server.c
irrigation_system/components/drivers/http/include/: http_server.h
irrigation_system/components/drivers/include/: http_server.h  mdns.h  wifi.h
irrigation_system/components/drivers/mdns/: mdns.c  mdns_networking.c
irrigation_system/components/drivers/mdns/include/: mdns.h
irrigation_system/components/drivers/wifi/: wifi.c
irrigation_system/components/drivers/wifi/include/: wifi.h
irrigation_system/components/services/: CMakeLists.txt
irrigation_system/components/services/control/: control.c
irrigation_system/components/services/control/include/: control.h
irrigation_system/components/services/http/: http.c
irrigation_system/components/services/http/include/: http.h
irrigation_system/components/services/mdns/: mdns.c
irrigation_system/components/services/mdns/include/: mdns.h
irrigation_system/components/services/mdns_service/: mdns_service.c
irrigation_system/components/services/mdns_service/include/: mdns_service.h
irrigation_system/components/services/wifi/: wifi.c
irrigation_system/components/services/wifi/include/: wifi.h
(+8 files in other folders)
